Button tweaks: Removed gradient, reduced shadow blur, fixed shadow clipping at bottom

--- a/styles.less
+++ b/styles.less
@@ -234,14 +234,9 @@ ul {
 }
 
 .button {
-    padding: 0.6em 0.8em;
+    padding: 0.6em 1.2em;
+    margin-bottom: 0.5em;
     border-radius: 2em;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.2),
-        rgba(0, 0, 0, 0.05)
-    );
-
     color: white;
     text-decoration: none;
     display: inline-block;
@@ -249,11 +244,10 @@ ul {
     &:hover,
     &:focus {
         background-image: linear-gradient(
-            to bottom,
-            rgba(255, 255, 255, 0.3),
-            rgba(0, 0, 0, 0.05)
+            rgba(255, 255, 255, 0.2),
+            rgba(255, 255, 255, 0.2)
         );
-        box-shadow: 0px 1px 3px rgba(0,0,0,0.6);
+        box-shadow: 0px 1px 1px rgba(0,0,0,0.6);
         color: white;
     }
 }
